Update Python Basic Programming Notebook 2.ipynb

--- a/Python Basic Programming Notebook 2.ipynb
+++ b/Python Basic Programming Notebook 2.ipynb
@@ -6,11 +6,11 @@
    "source": [
     "# Python Basic Programming Notebook 2  \n",
     "\n",
-    "Author - Suvhradip Ghosh\n",
+    "Author - VEENIT SINGH\n",
     "\n",
     "Python is an interpreted, high-level, general-purpose programming language. Created by Guido van Rossum and first released in 1991, Python has a design philosophy that emphasizes code readability, notably using significant whitespace. It provides constructs that enable clear programming on both small and large scales.\n",
     "\n",
-    "<b>Check Previous Notebook :: </b><a href=\"https://github.com/suvhradipghosh07/iNotepy-Python-for-Quick-Reference/blob/master/iNotepy.ipynb\">Python Basic Programming Notebook 2</a>"
+    "<b>Check Previous Notebook :: </b><a href=\"https://github.com/Veenits123/iNotepy-Python-for-Quick-Reference/blob/master/iNotepy.ipynb\">Python Basic Programming Notebook 2</a>"
    ]
   },
   {
