--- a/iNotepy.ipynb
+++ b/iNotepy.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Basic Python for Machine Learning\n",
-    "Author - Suvhradip Ghosh\n",
+    "Author - VEENIT SINGH\n",
     "\n",
     "Python is an interpreted, high-level, general-purpose programming language. Created by Guido van Rossum and first released in 1991, Python has a design philosophy that emphasizes code readability, notably using significant whitespace. It provides constructs that enable clear programming on both small and large scales.\n",
     "\n",
