--- a/iNotepy.ipynb
+++ b/iNotepy.ipynb
@@ -101,7 +101,7 @@
     }
    ],
    "source": [
-    "#here i am going to show you how to write multi line statement in python\n",
+    "#here i am going to show how to write multi line statement in python\n",
     "a = 3+2+3+2+ \\\n",
     "    3+2+3+2+ \\\n",
     "    2+2\n",
