--- a/Python Basic Programming Notebook 2.ipynb
+++ b/Python Basic Programming Notebook 2.ipynb
@@ -296,13 +296,13 @@
     {
      "data": {
       "text/plain": [
-       "array([['s', '', '', '', '', '', '', '', ''],\n",
-       "       ['', 'u', '', '', '', '', '', '', ''],\n",
-       "       ['', '', 'v', '', '', '', '', '', ''],\n",
-       "       ['', '', '', 'h', '', '', '', '', ''],\n",
-       "       ['', '', '', '', 'r', '', '', '', ''],\n",
-       "       ['', '', '', '', '', 'a', '', '', ''],\n",
-       "       ['', '', '', '', '', '', 'd', '', ''],\n",
+       "array([['v', '', '', '', '', '', '', '', ''],\n",
+       "       ['', 'e', '', '', '', '', '', '', ''],\n",
+       "       ['', '', 'e', '', '', '', '', '', ''],\n",
+       "       ['', '', '', 'n', '', '', '', '', ''],\n",
+       "       ['', '', '', '', 'i', '', '', '', ''],\n",
+       "       ['', '', '', '', '', 't', '', '', ''],\n",
+       "       ['', '', '', '', '', '', 'p', '', ''],\n",
        "       ['', '', '', '', '', '', '', 'i', ''],\n",
        "       ['', '', '', '', '', '', '', '', 'p']], dtype='<U1')"
       ]
