--- a/Python Basic Programming Notebook 2.ipynb
+++ b/Python Basic Programming Notebook 2.ipynb
@@ -283,7 +283,7 @@
     }
    ],
    "source": [
-    "#printing diagonal matrix\n",
+    "#printing of diagonal matrix\n",
     "a= np.diag([1,2,3,4,5])\n",
     "a"
    ]
